# Collabo

./: .gitignore  BackendAPI.md  README.md  db.sqlite3  diagrams.md  package-lock.json  pyproject.toml  requirements.txt  runlinux.sh  runwindows.ps1  testing.md
backend/: README.md  manage.py  pyproject.toml  run_markov.sh  test_json.json  test_registration.json
backend/api/: views.py
backend/llm_integration/: apps.py  tool_functions.py  urls.py  views.py
backend/mainsite/: asgi.py  settings.py  urls.py
backend/profile_management/: tests.py  urls.py  views.py
backend/project_management/: Emails.py  admin.py  decorators.py  join_request.py  models.py  tests.py  tests.py.orig  urls.py  views.py
backend/project_management/migrations/: 0001_initial.py  0002_initial.py  0002_project_members.py  0003_remove_project_description_remove_project_subtitle_and_more.py  0004_alter_project_preferred_skills.py  0004_join_request.py  0005_merge_20260221_1817.py  0005_project_creation_time_project_updated_time.py  0006_project_author_id.py  0006_report.py  0007_merge_0006_project_author_id_0006_report.py  0008_merge_20260319_1926.py
backend/user_authentication/: admin.py  models.py  tests.py  urls.py  utilities.py  views.py  views.py.orig
backend/user_authentication/migrations/: 0001_initial.py  0002_collabouser_availability_and_more.py  0002_passwordresettoken.py  0003_collabouser_active_project_notifications_and_more.py  0003_emailverificationtoken_passwordresettoken.py  0003_emailverificationtoken_passwordresettoken_and_more.py  0003_merge_20260308_1746.py  (+5 more)
(+119 files in other folders)
